Final adjustments to "product" "about-us" "index"

--- a/contact.html
+++ b/contact.html
@@ -42,9 +42,10 @@
                                              <!-- Navigation bar -->
 <header>
     <div class="navbar2">
-        <div class="logo"><a href="#">Mingle <span>More</span></a></div>
+        <div class="logo"><img src="images/pictures/Logo-image.png" alt=""><a href="#">Mingle <span>More</span></a></div>
         <ul class="links">
             <li><a href="index.html">Home</a></li>
+            <li><a href="product.html">Bracelets</a></li>
             <li><a href="about-us.html">About us</a></li>
             <li><a href="corporate.html">Corporate</a></li>
             <li><a href="#">Contact</a></li>
@@ -59,9 +60,10 @@
     
     <div class="dropdown-menu2">
         <li><a href="index.html">Home</a></li>
-        <li><a href="cards.html">About us</a></li>
+        <li><a href="product.html">Bracelets</a></li>
+        <li><a href="about-us.html">About us</a></li>
         <li><a href="corporate.html">Corporate</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li><a href="#" class="shopping-card-button">Shopping cart</a></li>
     </div>
 </header>
