--- a/corporate.html
+++ b/corporate.html
@@ -44,9 +44,10 @@
                                              <!-- Navigation bar -->
 <header>
     <div class="navbar2">
-        <div class="logo"><a href="#">Mingle <span>More</span></a></div>
+        <div class="logo"><img src="images/pictures/Logo-image.png" alt=""><a href="#">Mingle <span>More</span></a></div>
         <ul class="links">
             <li><a href="index.html">Home</a></li>
+            <li><a href="product.html">Bracelets</a></li>
             <li><a href="about-us.html">About us</a></li>
             <li><a href="corporate.html">Corporate</a></li>
             <li><a href="#">Contact</a></li>
@@ -61,9 +62,10 @@
     
     <div class="dropdown-menu2">
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">About us</a></li>
-        <li><a href="corporate.html" class="chosen-tab">Corporate</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="product.html">Bracelets</a></li>
+        <li><a href="about-us.html">About us</a></li>
+        <li><a href="corporate.html">Corporate</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li><a href="#" class="shopping-card-button">Shopping cart</a></li>
     </div>
 </header>
@@ -111,18 +113,17 @@
           <!-- Start General -->
           <h2 id="general">General Information</h2>
           <p>
-            This branded website is publicly available at
-            <a href="https://buas-media-interactive.github.io/">buas-media-interactive.github.io/my-website</a>
-            <em>(please change text <strong>and</strong> hyperlink destination)</em>
+             This branded website is publicly available at 
+             <a href="https://bentevanberkel.github.io/class5-group2-minglemore/"><u>https://bentevanberkel.github.io/class5-group2-minglemore/</u></a>
           </p>
           <p>
-            This website was created by&hellip; <em>(only students listed below will be graded!)</em>
+            This website was created by :
           </p>
           <ol>
             <li>Bente van Berkel (ID: 200562)</li>
-            <li>Kameliya Stoynova (ID: 000000)</li>
-            <li>Job Paas (ID: 000000)</li>
-            <li>Daan van Ommeren (ID: 000000)</li>
+            <li>Kameliya Stoynova (ID: 210086)</li>
+            <li>Job Paas (ID: 202686)</li>
+            <li>Daan van Ommeren (ID: 201041)</li>
           </ol>
           <!-- End General -->
 
