--- a/product.html
+++ b/product.html
@@ -53,7 +53,7 @@
             <li><a href="product.html">Bracelets</a></li>
             <li><a href="about-us.html">About us</a></li>
             <li><a href="corporate.html">Corporate</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
         
         <a href="#" class="shopping-card-button">Shopping cart</a>
