--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <title>PRJ4 MingleMore &mdash; About us </title>
+    <title>PRJ4 MingleMore &mdash; Home </title>
       
      <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
