--- a/product.html
+++ b/product.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <title>PRJ4 MingleMore &mdash; About us </title>
+    <title>PRJ4 MingleMore &mdash; Bracelet </title>
       
      <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -66,12 +66,14 @@
     </div>  
     
     <div class="dropdown-menu2">
+      <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="product.html">Bracelets</a></li>
         <li><a href="about-us.html">About us</a></li>
         <li><a href="corporate.html">Corporate</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="#" class="shopping-card-button">Shopping cart</a></li>
+      </ul>
     </div>
 </header>
                                       <!-- End of navigation bar -->
